# NewsSummary

./: .env.example  .firebaserc  .pre-commit-config.yaml  AGENTS.md  AI summary.py  MyNews.py  README.md  daily_news_summary.json  email_sender.py  firebase.json  main.py  package-lock.json  pyproject.toml  requirements.txt
.firebase/: hosting.cHVibGlj.cache
.github/workflows/: daily-summary.yml
docs/: CHANGELOG.md  UPGRADE_PLAN_G1.md
docs/PLANS/: audit_fixes_2026-06-17.md
functions/: index.js  package-lock.json  package.json
public/: index.html  unsubscribe.html
scripts/: rederive_categories.py  subscriber_locations.py
src/daily_bot/: __init__.py  __main__.py  circuit_breaker.py  config.py  db.py  emailer.py  groq_client.py  health.py  llm_client.py  main.py  models.py  scraper.py  summarizer.py
src/daily_bot/sources/: __init__.py  base.py  bbc.py  g1.py
src/daily_bot/templates/: email.html.j2
stubs/google/: generativeai.pyi
tests/: conftest.py
tests/integration/: test_multi_source.py  test_pipeline.py  test_subscriber_routing.py
tests/unit/: test_circuit_breaker.py  test_config_and_models.py  test_emailer.py  test_g1_scraper.py  test_groq_client.py  test_scraper.py  test_sources.py  test_summarizer.py
